--- a/css/post.css
+++ b/css/post.css
@@ -54,9 +54,10 @@
 }
 .post_content_dataset h2, .post_content_dataset h2 a {
     font-family: 'Open Sans', sans-serif;
-    margin-left: .5em;
+    margin-left: 0;
     font-size: 1.25em;
     color: black;
+    display: table-cell; 
 }
 
 .anchorlinks h2 a,
@@ -210,7 +211,13 @@ hr { border-top: 3px solid #3d3d3d; margin: 3em 0 2em 0;}
 	#wrap { width: 85%;}
 	.dsktp_tbl { display: none;}
 	.mbl_tbl { display: block;}
-}	
+   .button_tran, .button_dol, .button_dataset, .button_tran_left, .button_ls, .button_wide {
+        text-align: left;
+    }
+    .button_wide {
+        width: 100%;
+    }
+}
 
 @media screen and (min-width: 705px) { 
 	#wrap { width: 75%;}
@@ -322,6 +329,11 @@ tbody th:nth-of-type(1) {
 table { margin-bottom: 2em;}
 @media screen and (min-width: 48.5em) {
 	table{ min-width: 40em;}
+}
+
+
+.post_content_dataset p {
+    margin-left: 0 !important;
 }
 
 /*  #Mobile (0-767)
